<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_resto"
        android:layout_width="110dp"
        android:layout_height="77dp"
        android:layout_marginTop="@dimen/margenMainActivity"
        android:background="@drawable/resto"
        android:onClick="resto"
        android:text="@string/btn_resto"
        app:layout_constraintEnd_toEndOf="@+id/btn_multiplicar"
        app:layout_constraintStart_toStartOf="@+id/btn_multiplicar"
        app:layout_constraintTop_toBottomOf="@+id/btn_multiplicar" />

    <Button
        android:id="@+id/btn_dividir"
        android:layout_width="110dp"
        android:layout_height="77dp"
        android:layout_marginTop="@dimen/margenMainActivity"
        android:background="@drawable/division"
        android:onClick="dividir"
        android:text="@string/btn_dividir"
        app:layout_constraintEnd_toStartOf="@+id/btn_menos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_mas"
        app:layout_constraintTop_toBottomOf="@+id/btn_mas" />

    <Button
        android:id="@+id/btn_multiplicar"
        android:layout_width="110dp"
        android:layout_height="77dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/multiplicar"
        android:onClick="multiplicar"
        android:text="@string/btn_multiplicar"
        app:layout_constraintBottom_toBottomOf="@+id/btn_menos"
        app:layout_constraintStart_toEndOf="@+id/btn_menos"
        app:layout_constraintTop_toTopOf="@+id/btn_menos" />

    <Button
        android:id="@+id/btn_menos"
        android:layout_width="110dp"
        android:layout_height="77dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/menos"
        android:onClick="menos"
        android:text="@string/btn_menos"
        app:layout_constraintBottom_toBottomOf="@+id/btn_mas"
        app:layout_constraintStart_toEndOf="@+id/btn_mas"
        app:layout_constraintTop_toTopOf="@+id/btn_mas" />

    <EditText
        android:id="@+id/edt_numero1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="@dimen/margenMainActivity"
        android:layout_marginTop="@dimen/margenMainActivity"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="@dimen/margenMainActivity"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edt_hint_numero1"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="@dimen/tamLetra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_numero2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margenMainActivity"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edt_hint_numero2"
        android:inputType="numberDecimal"
        android:textSize="@dimen/tamLetra"
        app:layout_constraintEnd_toEndOf="@+id/edt_numero1"
        app:layout_constraintStart_toStartOf="@+id/edt_numero1"
        app:layout_constraintTop_toBottomOf="@+id/edt_numero1" />

    <Button
        android:id="@+id/btn_mas"
        android:layout_width="110dp"
        android:layout_height="77dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="@dimen/margenMainActivity"
        android:layout_marginTop="@dimen/margenMainActivity"
        android:background="@drawable/mas"
        android:text="@string/btn_mas"
        android:onClick="sumar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_numero2" />

    <TextView
        android:id="@+id/texto_resultado"
        android:layout_width="381dp"
        android:layout_height="342dp"
        android:layout_margin="@dimen/margenMainActivity"
        android:text="@string/txt_resultado"
        android:textSize="@dimen/tamresultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_resto" />
</androidx.constraintlayout.widget.ConstraintLayout>